Fixed whitespace issue

--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -3,6 +3,16 @@
  * Copyright 2013-2020 Start Bootstrap
  * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-one-page-wonder/blob/master/LICENSE)
  */
+
+ html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
  html {
   scroll-behavior: smooth;
 }
@@ -24,6 +34,15 @@ h6 {
   font-weight: 800 !important;
 }
 
+
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+}
 
 
 .btn-xl {
